force-app/main/default/objects/sugati__Itinerary_Text__c/sugati__Itinerary_Text__c.object-meta.xml
<CustomObject>
    <label>Itinerary Text</label>
    <nameField>
        <displayFormat>IT-{0000000000}</displayFormat>
        <label>ItineraryText ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Itinerary Text</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>