force-app/main/default/objects/sugati__Itinerary_Text__c/fields/sugati__IT_Country__c.field-meta.xml
<CustomField>
    <fullName>sugati__IT_Country__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Country</label>
    <referenceTo>sugati__Country__c</referenceTo>
    <relationshipLabel>Itinerary Text</relationshipLabel>
    <relationshipName>Quote_Text</relationshipName>
    <type>Lookup</type>
</CustomField>