force-app/main/default/objects/sugati__Itinerary_Text__c/fields/sugati__IT_Holiday_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__IT_Holiday_Type__c</fullName>
    <label>Holiday Type</label>
    <referenceTo>sugati__Holiday_Type__c</referenceTo>
    <relationshipLabel>Itinerary Text</relationshipLabel>
    <relationshipName>Quote_Text</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <reparentableMasterDetail>true</reparentableMasterDetail>
    <type>MasterDetail</type>
</CustomField>