force-app/main/default/objects/sugati__Itinerary_Text__c/fields/sugati__IT_Linked_Services_Extra_Item__c.field-meta.xml
<CustomField>
    <fullName>sugati__IT_Linked_Services_Extra_Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Linked Services &amp; Extra Item</label>
    <referenceTo>sugati__Linked_Services_Extra_Item__c</referenceTo>
    <relationshipLabel>Itinerary Text</relationshipLabel>
    <relationshipName>Itinerary_Text</relationshipName>
    <type>Lookup</type>
</CustomField>