force-app/main/default/objects/sugati__Itinerary_Text__c/fields/sugati__IT_Room_Type__c.field-meta.xml
<CustomField>
    <fullName>sugati__IT_Room_Type__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Room Type</label>
    <referenceTo>sugati__Room_Type__c</referenceTo>
    <relationshipLabel>Itinerary Text</relationshipLabel>
    <relationshipName>Itinerary_Text</relationshipName>
    <type>Lookup</type>
</CustomField>