force-app/main/default/objects/sugati__Itinerary_Text__c/fields/sugati__IT_Supplier__c.field-meta.xml
<CustomField>
    <fullName>sugati__IT_Supplier__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Supplier</label>
    <referenceTo>sugati__Supplier__c</referenceTo>
    <relationshipLabel>Itinerary Text</relationshipLabel>
    <relationshipName>Quote_Text</relationshipName>
    <type>Lookup</type>
</CustomField>