force-app/main/default/objects/sugati__Itinerary_Text__c/fields/sugati__IT_Transfer_Option__c.field-meta.xml
<CustomField>
    <fullName>sugati__IT_Transfer_Option__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer Option</label>
    <referenceTo>sugati__Transfer_Option__c</referenceTo>
    <relationshipLabel>Itinerary Text</relationshipLabel>
    <relationshipName>Itinerary_Text</relationshipName>
    <type>Lookup</type>
</CustomField>