force-app/main/default/objects/sugati__Itinerary_Text__c/fields/sugati__IT_What_to_do__c.field-meta.xml
<CustomField>
    <fullName>sugati__IT_What_to_do__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Accom, Trfr, Excur, Free Day</inlineHelpText>
    <label>What to do</label>
    <referenceTo>sugati__Activity__c</referenceTo>
    <relationshipLabel>Itinerary Text</relationshipLabel>
    <relationshipName>Itinerary_Text</relationshipName>
    <type>Lookup</type>
</CustomField>