force-app/main/default/objects/sugati__Itinerary_Text__c/fields/sugati__IT_Where_to_go__c.field-meta.xml
<CustomField>
    <fullName>sugati__IT_Where_to_go__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Where to go</label>
    <referenceTo>sugati__Where_to_go__c</referenceTo>
    <relationshipLabel>Itinerary Text</relationshipLabel>
    <relationshipName>Itinerary_Text</relationshipName>
    <type>Lookup</type>
</CustomField>