force-app/main/default/objects/sugati__Itinerary_Text__c/fields/sugati__S_IT_Language__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IT_Language__c</fullName>
    <label>Language</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Languages</valueSetName>
    </valueSet>
</CustomField>