force-app/main/default/objects/sugati__Itinerary_Text__c/fields/sugati__S_IT_Opportunity_Stage__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IT_Opportunity_Stage__c</fullName>
    <label>Opportunity Stage</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>sugati__Opportunity_Stages</valueSetName>
    </valueSet>
</CustomField>