force-app/main/default/objects/sugati__Itinerary_Text__c/fields/sugati__S_IT_Sugati_Data__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_IT_Sugati_Data__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sugati Data</label>
    <type>Checkbox</type>
</CustomField>