force-app/main/default/objects/sugati__Itinerary_Text__c/fields/sugati__Source__c.field-meta.xml
<CustomField>
    <fullName>sugati__Source__c</fullName>
    <defaultValue>(&quot;Manual&quot;)</defaultValue>
    <label>Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Manual</fullName>
            </value>
            <value>
                <fullName>WeTu</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>