force-app/main/default/objects/sugati__Itinerary_Text__c/listViews/sugati__All.listView-meta.xml
<ListView>
    <fullName>sugati__All</fullName>
    <columns>NAME</columns>
    <columns>sugati__IT_Holiday_Type__c</columns>
    <columns>sugati__IT_Supplier__c</columns>
    <columns>sugati__IT_Country__c</columns>
    <columns>sugati__IT_What_to_do__c</columns>
    <columns>sugati__IT_Where_to_go__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>